[package]
name = "gb"
version = "0.1.0"
authors = ["Rekai Musuka <rekai@musuka.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitfield = "0.13"
clap = { version = "3.1", features = ["cargo"] }
gilrs = "0.9"
egui-wgpu = "0.18"
egui-winit = "0.18"
pollster = "0.2"
rodio = "0.15"
rtrb = "0.2"
directories-next = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
thiserror = "1.0"
once_cell = "1.12"

[profile.release]
debug = true
